--- a/client/package.json
+++ b/client/package.json
@@ -3,9 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
-    "@mui/material": "^5.15.21",
+    "@mui/material": "^5.16.7",
+    "@mui/styles": "^6.1.5",
     "@testing-library/jest-dom": "^6.4.6",
     "@testing-library/react": "^16.0.0",
     "@testing-library/user-event": "^14.5.2",
@@ -42,10 +44,10 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-transform-private-property-in-object": "^7.24.7",
+    "ajv": "^8",
     "autoprefixer": "^10.4.19",
     "postcss": "^8.4.39",
-    "tailwindcss": "^3.4.4",
-    "ajv": "^8",
-    "@babel/plugin-transform-private-property-in-object": "^7.24.7"
+    "tailwindcss": "^3.4.4"
   }
 }
